CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-21 22:32:06
+lastsearch = 2024-07-21 22:46:14
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -87,9 +87,9 @@ title = Trump Selects Bitcoin-Owning Ohio Sen. JD Vance as Vice ...
 url = https://cryptonews.com/news/trump-selects-bitcoin-owning-ohio-sen-jd-vance-as-vice-presidential-candidate.htm
 
 [www.thespike.gg]
-match = -100.0%%
-title = Female Warriors vs SGA InCheon | VALORANT Game ...
-url = https://www.thespike.gg/br/match/female-warriors-sga-incheon/120610
+match = -140.0%%
+title = SGA InCheon vs 잇뽕따닥 | VALORANT Game Changers ...
+url = https://www.thespike.gg/br/match/sga-incheon-isppongttadag/120615
 
 [br.ign.com]
 match = -125.0%%
