--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-21 21:16:53
+lastsearch = 2024-07-21 22:45:20
 
 [chieutruc.info]
 match = -60.0%%
@@ -180,4 +180,9 @@ url = https://sotttt.caobang.gov.vn/
 match = 0.0%%
 title = ĐỊA CHỈ MUA CHIẾU TRÚC CAO SƠN TẠI HCM
 url = http://www.chieutretruc.com/2017/12/dia-chi-mua-chieu-truc-cao-son-tai-hcm.html
+
+[www.lazada.vn]
+match = -20.0%%
+title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè
+url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html
 
