--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-21 18:26:31
+lastsearch = 2024-07-21 23:20:09
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -365,4 +365,9 @@ url = https://www.expedia.com/Cheap-Flights-To-Tui.d6047410.Travel-Guide-Flights
 match = -200.0%%
 title = Beldade – Tui - a MICHELIN Guide Restaurant
 url = https://guide.michelin.com/en/galicia/tui/restaurant/beldade
+
+[louisquatorze.com]
+match = -316.7%%
+title = LOUIS QUATORZE | Enjoy and Shop the Classic and Luxury ...
+url = https://louisquatorze.com/
 
