CI images update

--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-21 21:50:16
+lastsearch = 2024-07-21 23:38:09
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [daros.com.vn]
 match = -40.0%%
@@ -190,4 +190,9 @@ url = https://www.pamirabezmenphotography.com/blog/2020/4/the-astorino-financial
 match = -166.7%%
 title = Operation Toledo, 173d Airborne Brigade - DTIC
 url = https://apps.dtic.mil/sti/tr/pdf/AD0510789.pdf
+
+[www.reddit.com]
+match = -120.0%%
+title = Best tank(s) for Ht-15 : r/WorldofTanks
+url = https://www.reddit.com/r/WorldofTanks/comments/smxjmz/best_tanks_for_ht15/
 
