--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-21 23:19:54
+lastsearch = 2024-07-21 23:39:59
 
 [shopee.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
 url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [voicon.net]
-match = -40.0%%
-title = Bộ chiếu gối điều hòa cao cấp - CỬA HÀNG MẸ VÀ BÉ ...
-url = https://voicon.net/bo-chieu-goi-dieu-hoa-cao-cap/
+match = 60.0%%
+title = Chiếu lụa điều hòa kèm gối cho bé
+url = https://voicon.net/chieu-lua-dieu-hoa-kem-goi-cho-be/
 
 [phatdatbinhthoi.com.vn]
 match = -40.0%%
