--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-21 22:48:02
+lastsearch = 2024-07-21 23:34:28
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -275.0%%
-title = Moss
-url = https://www.facebook.com/official.moss/?locale=vi_VN
+match = -126.7%%
+title = Celadon Sports & Resort Club - Facebook
+url = https://www.facebook.com/CeladonSRC/photos/️chỉ-còn-2-buổi-tập-nữa-chương-trình-burn-it-up-mùa-2-sẽ-kết-thúcchương-trình-bu/3097734877138264/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -247,9 +247,9 @@ title = Ghi bàn trên ứng dụng HDBank, đến châu Âu xem chung ...
 url = https://hdbank.com.vn/vi/news/detail/tin-tuc/ghi-ban-tren-ung-dung-hdbank-den-chau-au-xem-chung-ket-euro-2024
 
 [thuvienphapluat.vn]
-match = -286.7%%
-title = Bản án 200/2020/DS-PT ngày 17/08/2020 về tranh chấp yêu cầu ...
-url = https://thuvienphapluat.vn/banan/ban-an/ban-an-2002020dspt-ngay-17082020-ve-tranh-chap-yeu-cau-mo-loi-di-qua-bat-dong-san-lien-ke-190389
+match = -226.7%%
+title = Bản án về tranh chấp hợp đồng chuyển nhượng quyền sử ...
+url = https://thuvienphapluat.vn/banan/ban-an/ban-an-ve-tranh-chap-hop-dong-chuyen-nhuong-quyen-su-dung-dat-so-1562024dspt-325428
 
 [katinat.vn]
 match = -160.0%%
