--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-21 20:26:13
+lastsearch = 2024-07-21 23:37:09
 
 [everon.vip]
 match = -10.0%%
@@ -92,9 +92,9 @@ title = Nệm Everon
 url = https://noithatken.com/nem/nem-everon/
 
 [everonvietnam.com]
-match = -123.8%%
-title = cushion – mattress - | Everon - Korean Pillows & Blankets
-url = https://everonvietnam.com/en/dem-nem/
+match = -152.4%%
+title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & Blankets
+url = https://everonvietnam.com/en/kich-co/160-x-200/page/32/
 
 [nem.vn]
 match = -66.7%%
