--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-21 23:37:54
+lastsearch = 2024-07-21 23:45:27
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = 28.6%%
-title = Xin chào, tôi ở Đài Loan
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = 5.9%%
+title = Rạp Chiếu Phim Cũ
+url = https://www.facebook.com/phimhaygiare/
 
 [www.roc-taiwan.org]
 match = -128.6%%
@@ -37,9 +37,9 @@ title = Thang nhôm chữ M TW Đài Loan Pal B6-205
 url = https://www.thegioithangnhom.com/thang-nhom-dai-loan-pal-b6-205_7887.html
 
 [vi.wikipedia.org]
-match = -14.3%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 33.3%%
+title = Địa lý Đài Loan
+url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [m.facebook.com]
 match = -90.5%%
@@ -67,8 +67,8 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -114.3%%
-title = (Thuyết Minh) NGƯỜI VỢ ĐỊNH MỆNH - Tập 1 | Phim Ngôn ...
+match = -95.2%%
+title = Tập 1 | Phim Ngôn Tình Tổng Tài Bá Đạo Siêu Hay 2023
 url = https://www.youtube.com/watch?v=JiTBL5S6-kA
 
 [zh.wikipedia.org]
