--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-21 20:46:27
+lastsearch = 2024-07-21 23:51:14
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -64,7 +64,7 @@ url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-
 [www.leg.state.fl.us]
 match = -170.6%%
 title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/STATUTES/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.301.html
+url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
 
 [sofl.cooperatornews.com]
 match = -152.9%%
@@ -187,9 +187,9 @@ title =
 url = https://www.statesman.com/story/news/state/2024/05/08/hoa-texas-laws-2024-homeowners-association-fines-fees-penalties-complaints/73599110007/
 
 [www.youtube.com]
-match = -188.2%%
-title = Florida family in legal fight with HOA over backyard pool ...
-url = https://www.youtube.com/watch?v=H3uIIXSYxfc
+match = -82.4%%
+title = 71061 | تلميع وتنظيف الجلد الطبيعي المدو
+url = https://www.youtube.com/watch?v=GVioStfmXVc
 
 [winknews.com]
 match = -5.9%%
@@ -420,4 +420,9 @@ url = https://baynews9.com/fl/tampa/news/2024/03/07/homeowners--association-bill
 match = 0.0%%
 title = 
 url = https://www.palmbeachpost.com/story/news/local/2024/07/01/new-florida-hoa-laws-2024-explained-palm-beach-county/74276218007/
+
+[abc13.com]
+match = -182.4%%
+title = Some Houston condo owners fed up with $6000 in annual ...
+url = https://abc13.com/hoa-fees-assessment-homeowner-problems-where-does-my-homeowners-association-money-go/14473218/
 
