--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-21 16:11:37
+lastsearch = 2024-07-21 23:51:54
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -22,9 +22,9 @@ title = Thảm Lông Trải Giường Giá Rẻ Giá Tốt T05/2024
 url = https://www.lazada.vn/tag/tham-long-trai-giuong-gia-re/
 
 [flexhouse.vn]
-match = -104.5%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
-url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
+match = -68.2%%
+title = Thảm trải sàn phòng khách cotton linen Nhật AJC002
+url = https://flexhouse.vn/tham-trai-san-phong-khach-cotton-linen-nhat-ajc002
 
 [ochino.com]
 match = -45.5%%
