--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,21 +4,21 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-21 23:17:09
+lastsearch = 2024-07-22 00:18:31
 
 [www.instagram.com]
-match = -23.1%%
-title = Yuki Chan (@meow_kikiki)
-url = https://www.instagram.com/meow_kikiki/
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
-match = -253.8%%
-title = Hoi Chan draws on scientific illustrations to create ...
+match = -307.7%%
+title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -333.3%%
-title = 3X1
-url = https://en.wikipedia.org/wiki/3X1
+match = -15.4%%
+title = The Midnight After
+url = https://en.wikipedia.org/wiki/The_Midnight_After
 
 [nursing.hku.hk]
 match = -161.5%%
