--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-21 22:38:36
+lastsearch = 2024-07-22 00:16:24
 
 [shopee.vn]
 match = 35.3%%
@@ -13,8 +13,8 @@ url = https://shopee.vn/list/chiếu điều hòa
 
 [olbedding.com]
 match = 11.8%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
-url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 6 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-6/
 
 [goni.vn]
 match = 38.2%%
@@ -120,4 +120,9 @@ url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
 match = -5.9%%
 title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
 url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
+
+[www.youtube.com]
+match = -5.9%%
+title = Review chiếu điều hòa cao su non và vài món mua trên Sốp ...
+url = https://www.youtube.com/watch?v=1UjrRLNjJ7o
 
