--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-21 16:20:20
+lastsearch = 2024-07-22 00:09:57
 
 [m.youtube.com]
 match = -144.4%%
@@ -32,9 +32,9 @@ title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
 url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
-match = -155.6%%
-title = Tipps and Tricks - How to make CHA GIO - Authentic ...
-url = https://www.youtube.com/watch?v=YdTLFfXiGMk
+match = -133.3%%
+title = Cách Làm Nem Chua Đơn Giản Tại Nhà, Chuẩn Vị Nem ...
+url = https://www.youtube.com/watch?v=S3GOw-Dx7aM
 
 [www.grab.com]
 match = -116.7%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -77.8%%
+title = Cộng Đồng Người Việt Denver | 👉♥️Nem chua bò
+url = https://m.facebook.com/groups/2078029092481022/posts/3794938424123405/
 
 [www.proz.com]
 match = -183.3%%
