--- a/images/nem-sieu-nhe-5f-16/config.ini
+++ b/images/nem-sieu-nhe-5f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 lastopen = 2024-06-10 00:33:56
 
 [search]
-lastsearch = 2024-07-21 23:15:42
+lastsearch = 2024-07-22 00:35:36
 
 [shopee.vn]
 match = -61.1%%
@@ -125,4 +125,9 @@ url = https://www.home-barista.com/grinders/kalita-nice-cut-mill-t35342-80.html
 match = -111.1%%
 title = Giá kep nệm ở đâu rẻ nhất tháng 06/2024 - Trang 5
 url = https://dienmayhoangngan.com/tag/kep-nem-ti/?trang=5
+
+[tiki.vn]
+match = -138.9%%
+title = 4 Cách Làm Cơm Rượu Miền Bắc, Miền Nam Ngon Cho ...
+url = https://tiki.vn/blog/cach-lam-com-ruou/
 
