--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-21 20:47:31
+lastsearch = 2024-07-22 00:31:47
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
 url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
-match = -3.6%%
-title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+match = 7.1%%
+title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [www.diepxuan.com]
 match = 28.6%%
@@ -42,14 +42,14 @@ title = Chiếu trúc chiếu tre
 url = https://www.facebook.com/groups/chieu/
 
 [tiki.vn]
-match = -42.9%%
-title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu trúc hạt
+match = 34.6%%
+title = Mua Chiếu trúc hạt Quế Lâm
+url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
 
 [www.sendo.vn]
-match = -35.7%%
-title = Chiếu Trúc Nam Định Siêu Tốt, Giá Cạnh Tranh, Khuyến ...
-url = https://www.sendo.vn/chieu-truc-nam-dinh.htm
+match = -14.3%%
+title = Chiếu Trúc Hạt Quế Lâm kích thước 1m8x2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-1m8x2m-duo-c-kie-m-ha-ng-18050982-117148935.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721088000325_undefined_-1_cateLvl2_0_56_23_-1
 
 [chieutrucsaigon.com]
 match = 32.1%%
