--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-21 14:45:20
+lastsearch = 2024-07-22 00:29:33
 
 [phana.com.vn]
 match = -90.9%%
@@ -107,9 +107,9 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -400.0%%
-title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis - Airbnb
-url = https://www.airbnb.com.vn/hotels/1059440610457947224
+match = -309.1%%
+title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
+url = https://www.airbnb.com.vn/rooms/929459059736966278
 
 [freemeteo.cl]
 match = -281.8%%
