--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-22 00:13:16
+lastsearch = 2024-07-22 00:27:45
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = -50.0%%
+title = Park Chung Hee
+url = https://en.wikipedia.org/wiki/Park_Chung_Hee
 
 [www.britannica.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jXlida&sig=ACfU3U1p6xAoD0T5oprwSnTCqzgVnpvFhg&hl=en&sa=X&ved=2ahUKEwjz25vOmaGHAxVSAzQIHccMB4gQ6AF6BAgUEAM
 
 [30rates.com]
-match = -39.1%%
-title = USD TO ZAR TODAY AND FORECAST TOMORROW ...
-url = https://30rates.com/usd-to-zar-today-forecast-dollar-to-rand
+match = -91.3%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=ae520de63bfd0695&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiw0o7b0LiHAxWND1kFHY-LDjgQsZYEegQIWhAC
+url = https://www.google.com/search?sca_esv=6b3c8ee1ea66141c&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwirtbD507iHAxX4DzQIHZ6WCoIQsZYEegQIVRAC
 
 [produccionesitaca.es]
 match = -21.4%%
