--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-21 23:53:10
+lastsearch = 2024-07-22 00:44:20
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 09
 url = https://www.diepxuan.com/chieu-lac-d2-09.html
 
 [lacdau.com]
-match = -13.3%%
-title = LOA SADA D209 RGB ĐEN
-url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
+match = -26.7%%
+title = LOA SADA D209 RGB TRẮNG
+url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-trang
 
 [batdongsan.com.vn]
 match = -200.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -30.0%%
-title = 29 tháng 2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -80.0%%
+title = Saigon Outcast | Ho Chi Minh City
+url = https://www.facebook.com/saigonoutcast/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
