--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-21 23:18:16
+lastsearch = 2024-07-22 00:46:50
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -590,4 +590,9 @@ url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 match = -81.0%%
 title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
 url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
+
+[veteris.it]
+match = 0.0%%
+title = Khối Mô Hậu Trực U Môn Tả Tràng
+url = https://veteris.it/7740937-khối-tả-hậu-u-trực-môn-tràng-mô.html
 
