--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-22 00:32:44
+lastsearch = 2024-07-22 00:50:54
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
 url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -20.8%%
-title = Màn chụp tự bung đỉnh vuông cao cấp bảo hành 18 tháng
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-cao-cấp-bảo-hành-18-tháng-Mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-i.321953124.23825582591
+match = -29.2%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [easydream.vn]
 match = -4.2%%
