--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-21 20:47:54
+lastsearch = 2024-07-22 01:21:40
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
 match = -33.3%%
@@ -23,8 +23,8 @@ url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m co
 
 [changagoidemsonghong.com]
 match = -14.3%%
-title = Chăn ga gối Home mã H17-048 Sale 30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+title = Bộ chăn ga gối Walt Disney mã BY20001
+url = https://changagoidemsonghong.com/chan-ga-goi-by20001
 
 [demsonghonghanoi.com]
 match = -14.3%%
