--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-22 00:51:06
+lastsearch = 2024-07-22 01:17:10
 
 [phana.com.vn]
 match = -90.9%%
@@ -37,9 +37,9 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -263.6%%
-title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường/1m2
+match = -190.9%%
+title = giường 1m giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=giường 1m
 
 [dogodelathanhhanoi.com]
 match = -245.5%%
@@ -52,9 +52,9 @@ title = Giường Gấp Nhập Khẩu Nhật Bản OTB-MN
 url = https://hungnamphat.com.vn/giuong-gap-nhap-khau-nhat-ban-otb-mn/
 
 [www.lazada.vn]
-match = -127.3%%
-title = Giường Gỗ 1 Người Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/giuong-go-1-nguoi/
+match = -263.6%%
+title = Giường 1 M 6 Giá Tốt T04/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/giuong-1-m-6/?innerlink=hot_v1
 
 [hoaphatsaigon.com]
 match = -272.7%%
