--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-22 00:27:45
+lastsearch = 2024-07-22 01:16:23
 
 [en.wikipedia.org]
-match = -50.0%%
-title = Park Chung Hee
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+match = 21.7%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [www.britannica.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Runeterra Reforged Championship
 url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
 
 [www.youtube.com]
-match = -78.3%%
-title = Why I #lovesteel 14 - Yerim Kim, POSCO, Seoul Korea
-url = https://www.youtube.com/watch?v=4OHzr8q36_Y
+match = -11.8%%
+title = I'm back in Korea
+url = https://www.youtube.com/watch?v=uk4bqEQ8uiU
 
 [www.asianstudies.org]
 match = 17.4%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=6b3c8ee1ea66141c&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwirtbD507iHAxX4DzQIHZ6WCoIQsZYEegQIVRAC
+url = https://www.google.com/search?sca_esv=5b98f86993edd4ca&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiDme_o3riHAxVeN2IAHQuHDTYQsZYEegQIUhAC
 
 [produccionesitaca.es]
 match = -21.4%%
