--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-21 22:52:52
+lastsearch = 2024-07-22 01:47:21
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -17,14 +17,14 @@ title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
 url = https://songhong.info/chan-ga-goi-bc16
 
 [demxanh.com]
-match = -19.0%%
-title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
-url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
+match = -52.4%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -23.8%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -85.7%%
-title = Bộ ga gối chần bông cao cấp ETAMI cotton Hàn Quốc 100 ...
-url = https://shopee.vn/Bộ-ga-gối-chần-bông-cao-cấp-ETAMI-cotton-Hàn-Quốc-100-Hoa-Nhí-Xanh-Ngọc-gồm-1-ga-chần-chun-2-vỏ-gối-đầu-i.530345658.23830480845
+match = -95.2%%
+title = [giá hủy diệt]Bộ ga gối bo chun bọc đệm,vải cotton poly ...
+url = https://shopee.vn/-giá-hủy-diệt-Bộ-ga-gối-bo-chun-bọc-đệm-vải-cotton-poly-chọn-nhiều-mẫu-tam-giác-ghi--i.703206422.11490325681
 
 [runa.vn]
 match = -4.8%%
