--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-21 23:40:43
+lastsearch = 2024-07-22 01:49:33
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -106.2%%
-title = EM TÌNH CHÀO CẢ NHÀ 0383456504 TRƯA 20/7
-url = https://www.youtube.com/watch?v=E0QTdYhqmrU
+match = -231.2%%
+title = Thời sự sáng 20/7: Tổng bí thư Nguyễn Phú Trọng - Nhà lãnh ...
+url = https://www.youtube.com/watch?v=94lvutN9mUA
 
 [hawater.com.vn]
 match = -75.0%%
@@ -58,8 +58,8 @@ url = https://tuyensinh247.com/bai-tap-62399.html
 
 [www.thegioididong.com]
 match = -193.8%%
-title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
-url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
+title = Tổng hợp đáp án game Đuổi hình bắt chữ (2710 câu) mới ...
+url = https://www.thegioididong.com/game-app/tong-hop-dap-an-game-duoi-hinh-bat-chu-2710-cau-moi-va-day-du-1393175
 
 [vnexpress.net]
 match = -156.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -212.5%%
-title = trở lại từ sau kỳ nghỉ EWC, các ứng cử viên vô địch sẽ tiếp
-url = https://m.facebook.com/lolnetizenvtrans/photos/chiều-nay-xem-trận-nàohiện-tại-chưa-có-thông-báo-chính-thức-từ-vcs-nên-admin-vẫn/968678178390020/
+match = -118.8%%
+title = Thiên Nhai Minh Nguyệt Đao VNG Official Group
+url = https://m.facebook.com/groups/thiennhaiminhnguyetdaovng/posts/480404551265212/
 
 [www.sjcallahabad.org]
 match = -212.5%%
