--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-21 22:38:47
+lastsearch = 2024-07-22 01:44:52
 
 [shopee.vn]
 match = -47.8%%
@@ -12,9 +12,9 @@ title = Chiếu Cói Thái Bình ❤️FREESHIP❤️Chiếu Cói May Viền ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-❤️FREESHIP❤️Chiếu-Cói-May-Viền-In-Hoa-Gấm-Dừa-0-8-1m2-1m5-1m6-1m8-2m2-i.126028938.10544465291
 
 [m.facebook.com]
-match = 8.7%%
-title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
-url = https://m.facebook.com/CHIEUNHUAHATRANG/
+match = -13.0%%
+title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
+url = https://m.facebook.com/61553157173242/
 
 [tiki.vn]
 match = -21.7%%
