--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-21 23:49:47
+lastsearch = 2024-07-22 01:46:19
 
 [burningman.org]
 match = 0.0%%
@@ -770,4 +770,14 @@ url = https://www.northropgrumman.com/
 match = -200.0%%
 title = Samsung US | Mobile | TV | Home Electronics | Home ...
 url = https://www.samsung.com/us/
+
+[www.kingsdominion.com]
+match = -186.7%%
+title = Kings Dominion: Virginia Amusement Park & Water Park
+url = https://www.kingsdominion.com/
+
+[ph.lacounty.gov]
+match = -220.0%%
+title = LAC | DPH | Wear a Mask to protect yourself from COVID-19
+url = http://ph.lacounty.gov/masks
 
