--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-22 00:12:32
+lastsearch = 2024-07-22 01:52:42
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = -64.7%%
+title = Matyu 20 | TPIPNG Bible | YouVersion
+url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
 
 [mizobibleblog.wordpress.com]
-match = -111.8%%
-title = Exodus 1-40 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
+match = -123.5%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
-match = -147.1%%
-title = Matthew 20:22-23 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22-23&version=NIV
+match = -100.0%%
+title = Matthew 20:22 New American Standard Bible
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NASB
 
 [mungchup.com]
 match = -100.0%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
@@ -185,4 +185,9 @@ url = https://h5.lazada.vn/products/man-chup-tu-bung-dinh-rong-cao-cap-i45447810
 match = 0.0%%
 title = Talk:Stun Rod
 url = https://www.ufopaedia.org/index.php/Talk:Stun_Rod
+
+[www.christianity.com]
+match = -182.4%%
+title = Matthew 20:22 - KJV - But Jesus answered and said, .. ...
+url = https://www.christianity.com/bible/kjv/matthew/20-22
 
