--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-21 21:48:50
+lastsearch = 2024-07-22 01:45:46
 
 [www.lazada.vn]
 match = -27.8%%
@@ -167,9 +167,9 @@ title = Perspective on photonic memristive neuromorphic computing
 url = https://photonix.cn/cn/article/doi/10.1186/s43074-020-0001-6
 
 [sagatexvietnam.online]
-match = -122.2%%
-title = Vỏ Gối Khách Sạn 6 Sao, 100%% Cotton, Vải Dày, Mềm Mại
-url = https://sagatexvietnam.online/product/bao-goi-cao-cap-mau-trang-vai-t500-100-cotton-sagatex-viet-nam/
+match = -138.9%%
+title = Vỏ Gối Khách Sạn 5 Sao, Vải 100%% Cotton Cao Cấp, Mềm Mại
+url = https://sagatexvietnam.online/product/vo-goi-mau-trang-vai-t400-100-cotton-sagatex-50cmx70cm/
 
 [www.thecooperativelogisticsnetwork.com]
 match = -38.9%%
