CI images update

--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-21 21:29:23
+lastsearch = 2024-07-22 02:17:42
 
 [www.linkedin.com]
 match = -145.5%%
@@ -82,9 +82,9 @@ title = Reviews: On the Edge
 url = https://www.imdb.com/title/tt0091677/reviews
 
 [ultrasignup.com]
-match = -63.6%%
-title = Nick Wilson's Results
-url = https://ultrasignup.com/results_participant.aspx?fname=Nick&lname=Wilson
+match = -36.4%%
+title = Registration Hot List
+url = https://ultrasignup.com/hotlist.aspx
 
 [www.gs1.org]
 match = -18.2%%
