--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-21 18:49:59
+lastsearch = 2024-07-22 02:18:48
 
 [helloviettravel.com]
-match = -50.0%%
-title = Tour Xuyên Việt 18 ngày 17 đêm
+match = -181.2%%
+title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
 url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
 
 [saovangtravel.com]
@@ -32,8 +32,8 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -181.2%%
-title = Địa điểm du lịch Nghệ An - 18 tọa độ VUI CHƠI hấp dẫn nhất
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
 url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -200.0%%
-title = USA RoadTrip: Thiên đường cám dỗ - Las Vegas | Du lịch Mỹ ...
-url = https://www.youtube.com/watch?v=7TdSEX4JFdw
+match = -143.8%%
+title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
+url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
