--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-22 00:49:03
+lastsearch = 2024-07-22 02:09:38
 
 [everonvn.com.vn]
-match = -114.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity ...
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -14.3%%
-title = Everon Quảng Bình Ga phủ ESM20013 180x200
-url = https://www.everonqb.com/ga-phu-esm20013-180x200.html
+match = -38.1%%
+title = Everon Quảng Bình Bộ ga phủ EPCARLESS 160x200
+url = https://www.everonqb.com/bo-ga-phu-epcarless-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -66.7%%
-title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
-url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
+match = -119.0%%
+title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
+url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
 
 [beecost.vn]
 match = -61.9%%
