--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-22 01:45:14
+lastsearch = 2024-07-22 02:15:25
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Where We Fly | Flights with TUI 2024 / ...
-url = https://www.tui.co.uk/flight/where-we-fly
+match = -160.0%%
+title = Marella Cruises | Cruise Holidays 2024 / 2025
+url = https://www.tui.co.uk/cruise/
 
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-135
 
 [www.changiairport.com]
 match = -213.3%%
@@ -47,8 +47,8 @@ title = Book TUI Flights to Singapore | Skyscanner
 url = https://www.skyscanner.ie/flights/airline-flights-to-city/sins/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
+match = -180.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [travelweekly.co.uk]
@@ -97,9 +97,9 @@ title = 𝒯𝒽𝑒 𝒯𝓊𝒾 𝒞𝑜𝓁𝓁𝑒𝒸𝓉𝒾𝑜𝓃 (@the
 url = https://www.instagram.com/thetuicollection/
 
 [www.tuigroup.com]
-match = 0.0%%
-title = TUI Group
-url = https://www.tuigroup.com/en-en
+match = -26.7%%
+title = Reports & Presentations
+url = https://www.tuigroup.com/en-en/investors/reports-and-presentations
 
 [airserviceone.com]
 match = -173.3%%
@@ -140,4 +140,9 @@ url = https://www.skyscanner.net/flights/airline-flights-to-airport/sin/tui-tom/
 match = -53.3%%
 title = Tui dreamliner - SeatGuru Forum
 url = https://www.tripadvisor.com/ShowTopic-g1-i12084-k14596422-o10-Tui_dreamliner-SeatGuru.html
+
+[www.thenaturaladventure.com]
+match = -240.0%%
+title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
 
