CI images update

--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-22 02:15:02
+lastsearch = 2024-07-22 02:50:49
 
 [xoptraisan.info]
-match = -147.4%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 26.3%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamaulac.com.vn]
-match = -31.6%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = 10.5%%
+title = Lưu trữ THẢM NỈ GHÉP
+url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep
 
 [thamvinhthuan.com]
 match = 26.3%%
@@ -42,9 +42,9 @@ title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
 url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
 
 [tiki.vn]
-match = -94.7%%
-title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
+match = -147.4%%
+title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
+url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-0-6cm-tam-mau-do-nhu-hinh-p74677637.html?spid=75099611&__s=ssdp
 
 [thamsami.com]
 match = -84.2%%
@@ -65,4 +65,14 @@ url = http://thamachau.vn/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam521
 match = -89.5%%
 title = Thảm xốp một màu 60*60cm giá rẻ tại Hồ Chí Minh
 url = https://www.pinterest.com/pin/763993524284509627/
+
+[khovatlieusan.com]
+match = 46.7%%
+title = Thảm xốp vân gỗ
+url = https://khovatlieusan.com/tham-xop-van-go-916012.html
+
+[www.lazada.vn]
+match = -131.6%%
+title = 15 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 40cm x ...
+url = https://www.lazada.vn/products/15-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-40cm-x-40cm-x-06cmtam-mau-do-do-nhu-hinh-i1054592403-s3602272936.html
 
