--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-22 00:47:24
+lastsearch = 2024-07-22 02:45:38
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -231.2%%
-title = Thời sự sáng 20/7: Tổng bí thư Nguyễn Phú Trọng - Nhà lãnh ...
-url = https://www.youtube.com/watch?v=94lvutN9mUA
+match = -218.8%%
+title = Siêu đập Tam Hiệp mở 11 cửa xả đáy, người dân bỏ của chạy ...
+url = https://www.youtube.com/watch?v=AxZHStRC-YU
 
 [tuyensinh247.com]
 match = -225.0%%
