--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-22 02:16:57
+lastsearch = 2024-07-22 02:51:20
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooe9Xx5nqKBw5R1pIdXdB74yzk-AiNe2iS1OW-_tgUv6ITRg15l
 
 [vongxepsaigon.vn]
 match = -52.4%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -109.5%%
-title = chiếu tre 1,4*1,9m hạt nâu không viền hàng Việt Nam siêu rẻ
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-1-4*1-9m-hạt-nâu-không-viền-hàng-Việt-Nam-siêu-rẻ-i.15000357.2176483881
+match = -23.8%%
+title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
+url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
 
 [www.lazada.vn]
 match = -66.7%%
