--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-22 02:18:39
+lastsearch = 2024-07-22 02:52:25
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -132,9 +132,9 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reddit.com]
-match = -85.0%%
-title = Legal adult age in Korea is 19, not 18 : r/kpoprants
-url = https://www.reddit.com/r/kpoprants/comments/x4x0uh/legal_adult_age_in_korea_is_19_not_18/
+match = -35.0%%
+title = Korea is no country for long names
+url = https://www.reddit.com/r/korea/comments/zmmrpi/korea_is_no_country_for_long_names/
 
 [timesofindia.indiatimes.com]
 match = -115.0%%
@@ -227,9 +227,9 @@ title = SSD prices could steady or even drop as NAND chip ...
 url = https://www.pcgamer.com/hardware/storage/ssd-prices-set-to-tumble-as-nand-chip-makers-boost-production/
 
 [www.youtube.com]
-match = -135.0%%
-title = Inside The "North Korea" of Africa 🇪🇷: How It Really Is (#174)
-url = https://www.youtube.com/watch?v=lAHumbL12Z8
+match = -100.0%%
+title = Korean Pronunciation : 네(Ne? De?), 뭐(Mo? Bo?)
+url = https://www.youtube.com/watch?v=0LJp3kjDAmM
 
 [carnegieendowment.org]
 match = -90.0%%
@@ -302,9 +302,9 @@ title =
 url = https://languagelog.ldc.upenn.edu/nll/?p=39433
 
 [www.quora.com]
-match = -125.0%%
-title = Can I move to South Korea at the age of 18 and graduate ...
-url = https://www.quora.com/Can-I-move-to-South-Korea-at-the-age-of-18-and-graduate-from-a-high-school-there-without-my-parents-permission-I-live-in-America-and-the-age-of-adulthood-here-is-18-so-I-can-leave-the-country-right
+match = -115.0%%
+title = Hey, can I move out at 18 and move to South Korea ...
+url = https://www.quora.com/Hey-can-I-move-out-at-18-and-move-to-South-Korea-and-get-a-degree-there
 
 [hospitalfield.org.uk]
 match = -90.0%%
@@ -425,4 +425,14 @@ url = https://www.outlookindia.com/
 match = -33.3%%
 title = Ifang Bremer
 url = https://twitter.com/IfangBremer/status/1801089320365031905
+
+[www.girlsnotbrides.org]
+match = 0.0%%
+title = 
+url = https://www.girlsnotbrides.org/learning-resources/child-marriage-atlas/regions-and-countries/south-korea/
+
+[www.facebook.com]
+match = -160.0%%
+title = Nigerian characters don reach Germany o | Nigeria character ...
+url = https://www.facebook.com/100050558526451/videos/nigerian-characters-don-reach-germany-o/2236257006736612/
 
