--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-22 01:47:54
+lastsearch = 2024-07-22 03:19:04
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -11.8%%
-title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVIP1s4e&sig=ACfU3U08PLm21V36fXk0z5N_htRQRiIneA&hl=en&sa=X&ved=2ahUKEwjT1Lfu5biHAxXCEVkFHbu4DTYQ6AF6BAgWEAM
+match = -223.5%%
+title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiUVOoD-C&sig=ACfU3U0rME3EARrxOM8e-XnIl2IglLlvNg&hl=en&sa=X&ved=2ahUKEwjbyMSe-riHAxWwD1kFHaWjADkQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
