--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-22 02:44:32
+lastsearch = 2024-07-22 03:15:08
 
 [shopee.vn]
 match = -8.0%%
@@ -27,9 +27,9 @@ title = Xin chào, tôi ở Đài Loan
 url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
-match = 12.5%%
-title = Lịch sử Đài Loan
-url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
@@ -117,9 +117,9 @@ title = 15 người Đài Loan vào Trung Quốc bị bắt giữ, 51 ...
 url = https://trithucvn.co/the-gioi/15-nguoi-dai-loan-vao-trung-quoc-bi-bat-giu-51-nguoi-bi-tham-van.html
 
 [www.klook.com]
-match = -12.0%%
-title = 15 Món Đặc Sản Đài Loan Nhất Định Phải Thử
-url = https://www.klook.com/vi/blog/dac-san-dai-loan/
+match = -48.0%%
+title = 15 Chợ Đêm Đài Loan Nổi Tiếng Cho Hội Thích Mua Sắm
+url = https://www.klook.com/vi/blog/kham-pha-nhung-khu-cho-dem-o-dai-loan/
 
 [www.dkn.tv]
 match = -76.0%%
