--- a/images/nem-dreamland-uc-180x200x14/config.ini
+++ b/images/nem-dreamland-uc-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-180x200x14.html
 lastopen = 2024-06-06 16:44:35
 
 [search]
-lastsearch = 2024-07-22 01:17:21
+lastsearch = 2024-07-22 03:21:16
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
 
 [forum.mattressunderground.com]
-match = -18.5%%
-title = Review of the Ultimate Dreams mattress
-url = https://forum.mattressunderground.com/t/review-of-the-ultimate-dreams-mattress/616
+match = -70.4%%
+title = Dreamfoam 12 in 1 Customizable Mattress Vs. Tuft & ...
+url = https://forum.mattressunderground.com/t/dreamfoam-12-in-1-customizable-mattress-vs-tuft-needle-10-vs-dreafoam-ud-latex-mattress/5474
 
 [www.instagram.com]
 match = -88.9%%
