CI images update

--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-22 02:45:49
+lastsearch = 2024-07-22 03:34:35
 
 [www.amazon.com]
 match = -309.1%%
@@ -165,4 +165,9 @@ url = https://otohayauto.vn/boc-ghe-da-o-to-long-xuyen/
 match = -90.9%%
 title = VỆ SINH GHẾ DA NỈ VẢI - 1539
 url = https://liqui-moly.vn/ve-sinh-ghe-da-ni-vai-1539
+
+[noithathoaphat123.com]
+match = -245.5%%
+title = Ghế da trưởng phòng SG912 - Nội Thất Hòa Phát
+url = https://noithathoaphat123.com/ghe-da-truong-phong-sg912.html
 
