--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-21 18:44:33
+lastsearch = 2024-07-22 03:30:48
 
 [www.diepxuan.com]
-match = -72.7%%
-title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+match = -27.3%%
+title = Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
@@ -17,9 +17,9 @@ title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
 url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
 
 [m.facebook.com]
-match = -18.2%%
-title = COCO Decor - Chăn Ga Gối | Nam Định
-url = https://m.facebook.com/cocodecorchangagoidem/
+match = -81.8%%
+title = Chiếu điều hoà (chiếu mây), chiếu tre, chăn-ga-gối
+url = https://m.facebook.com/groups/151776543537474/posts/778191197562669/
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -50.0%%
-title = Bộ Ga Giường Cao Cấp Loại Ga Chun Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/
+match = -77.3%%
+title = Chiếu Điều Hòa Cao Su Non Bo Chun Chanel Coco phiên ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html
 
 [www.instagram.com]
 match = 4.5%%
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -81.8%%
-title = Chiếu điều hoà (chiếu mây), chiếu tre, chăn-ga-gối
-url = https://www.facebook.com/groups/151776543537474/posts/-coco-2024️-chiếu-bọc-chun-mới-nhất-của-coco-siêu-bắt-mắt-với-thiết-kế-mới-nhất️/775069884541467/
+match = -13.6%%
+title = Chăn ga gối đệm - CoCo HOUSE | Vinh Yen
+url = https://www.facebook.com/hoa32/
 
 [foreverbedding.net]
 match = -18.2%%
