--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-22 01:23:05
+lastsearch = 2024-07-22 03:35:20
 
 [www.instagram.com]
 match = -161.5%%
@@ -97,8 +97,8 @@ title = 'Fu' is Joy and should be shared widely in this Lunar Chinese ...
 url = https://touch.facebook.com/MightyWhiteMY/photos/a.591336504336777.1073741828.587718204698607/1145854872218268/?type=3&source=48&__tn__=EH-R
 
 [www.pinterest.com]
-match = -184.6%%
-title = Vintage armchair "Boxer" by Kwok Hoi Chan ...
+match = -307.7%%
+title = Vintage armchair "Boxer" by Kwok Hoi Chan Boxer for Steiner ...
 url = https://www.pinterest.com/pin/938437641088783742/
 
 [my.linkedin.com]
