--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-22 02:50:49
+lastsearch = 2024-07-22 03:33:01
 
 [xoptraisan.info]
-match = 26.3%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -147.4%%
+title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
+url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamaulac.com.vn]
-match = 10.5%%
-title = Lưu trữ THẢM NỈ GHÉP
-url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep
+match = -31.6%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
 match = 26.3%%
@@ -37,9 +37,9 @@ title = Thảm xốp 60x60cm
 url = https://thamtretho.com/tham-xop-60x60cm
 
 [vatlieulotsan.com]
-match = -52.6%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -73.7%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [tiki.vn]
 match = -147.4%%
