--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-22 00:49:58
+lastsearch = 2024-07-22 03:30:25
 
 [www.tiktok.com]
 match = 0.0%%
@@ -129,7 +129,7 @@ url = https://www.instagram.com/boots_tagram23/p/C8kypfiPAue/
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=lv_LV
+url = https://www.facebook.com/diepxuanco/?locale=nb_NO
 
 [www.espn.com]
 match = -93.8%%
