--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-22 00:11:00
+lastsearch = 2024-07-22 04:24:52
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 50.0%%
-title = Chăn ga gối đệm giá rẻ
-url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
+match = 25.0%%
+title = 10 bộ chăn ga gối đệm tencel đẹp nhất
+url = https://chanrathanhthuy.com/tin-tuc/10-bo-chan-ga-goi-dem-tencel-dep-nhat-714.html
 
 [myhunggia.com]
 match = -4.2%%
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = -8.3%%
-title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
+match = 20.8%%
+title = Chăn ga gối cotton Notag 4 món 16
+url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
