--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-22 01:22:54
+lastsearch = 2024-07-22 04:28:30
 
 [tiki.vn]
 match = -138.9%%
@@ -37,9 +37,9 @@ title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -83.3%%
-title = Bộ ga chun Cotton chống thấm màu xanh dương
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-duong.html
+match = -66.7%%
+title = Bộ ga chun Cotton chống thấm màu xám đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
 
 [foreverbedding.net]
 match = -61.1%%
