--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-07-22 02:24:14
+lastsearch = 2024-07-22 04:25:14
 
 [demxanh.com]
 match = -14.8%%
@@ -22,8 +22,8 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [tiki.vn]
-match = 33.3%%
-title = Chiếu điều hòa có mát không? Review 10 ...
+match = 0.0%%
+title = 
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [www.dienmayxanh.com]
