--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-22 00:28:04
+lastsearch = 2024-07-22 04:28:07
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -200.0%%
-title = My condo HOA has an outright ban on any kids living in the ...
-url = https://www.reddit.com/r/legaladvice/comments/11a9d9s/my_condo_hoa_has_an_outright_ban_on_any_kids/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -176.5%%
-title = What can I do when a Homeowner's Association pops up in ...
-url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
+match = -194.1%%
+title = If you live in a neighborhood with a HOA can they keep out ...
+url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -82,9 +82,9 @@ title =
 url = https://www.cedarmanagementgroup.com/south-carolina-hoa-complaints/
 
 [www.hopb.co]
-match = -135.3%%
-title = Virginia HOA Laws, Rules, Resources & Information
-url = https://www.hopb.co/virginia
+match = -170.6%%
+title = What About the Children? HOA Age Restrictions and FHA ...
+url = https://www.hopb.co/blog/what-about-the-children-hoa-age-restrictions-and-fha-proscriptions
 
 [www.deanmead.com]
 match = 0.0%%
