--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-22 02:49:25
+lastsearch = 2024-07-22 04:26:53
 
 [quizlet.com]
 match = -170.0%%
@@ -49,7 +49,7 @@ url = https://www.jcpenney.com/p/loom-forge-ren-16-pc-stoneware-dinnerware-set/p
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Ren_(philosophy)
+url = https://en.wikipedia.org/wiki/Ren_Gill
 
 [books.google.com]
 match = -430.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.phillyvoice.com/ren-gill-music-mental-health-chronic-illness-/
 
 [www.instagram.com]
-match = -320.0%%
-title = MC REN (@realmcren) • Instagram photos and videos
-url = https://www.instagram.com/realmcren/?hl=en
+match = -60.0%%
+title = King Ren 👑 (@rentman2016)
+url = https://www.instagram.com/rentman2016/?locale=推特和网络营销的区别＜谷歌推广认证seo8.vip＞3boO&hl=am-et
 
 [www.youtube.com]
 match = -133.3%%
