--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-21 19:58:35
+lastsearch = 2024-07-22 04:28:41
 
 [gobearcats.com]
 match = -142.1%%
@@ -57,9 +57,9 @@ title = Banking Act Unclaimed Money as at 31 December 2007
 url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 
 [www2.ed.gov]
-match = 0.0%%
-title = 
-url = https://www2.ed.gov/programs/psp/select.html
+match = -126.3%%
+title = Candidates for the US Presidential Scholars Program
+url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
