--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-21 22:32:28
+lastsearch = 2024-07-22 04:52:39
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -226.7%%
+title = Thánh Riviu | CHIỀU 14/6, TP.HCM XUẤT HIỆN MƯA LỚN KÈM ...
+url = https://m.facebook.com/groups/riviu.official/posts/3598203903642867/
 
 [www.youtube.com]
 match = -133.3%%
@@ -360,4 +360,9 @@ url = https://smarthomekit.vn/san-pham/yeelight-m2-pro/
 match = -206.7%%
 title = Xoilac TV - Xem Trực Tiếp Bóng Đá Xôi Lạc TV hôm nay HD
 url = https://xoilaczvi.tv/
+
+[vpcqcsdt.bocongan.gov.vn]
+match = -40.0%%
+title = Tra cứu đối tượng truy nã
+url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
 
