--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-22 02:15:34
+lastsearch = 2024-07-22 04:48:37
 
 [dongagroup.vn]
 match = -272.7%%
@@ -93,8 +93,8 @@ url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
 match = -272.7%%
-title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
+title = Có bán Giường & lều tắm nắng tại Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/tanning-beds/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -117,9 +117,9 @@ title = Wgm yura legendado [OZVilB]
 url = https://www.nitrc.org/links/?group_id=51&url=https://detsad147vrn.ru/27146399zfe43a
 
 [www.airbnb.com.vn]
-match = -354.5%%
-title = Phòng Superior có giường cỡ King tại Millennium ... - Airbnb
-url = https://www.airbnb.com.vn/hotels/1059443082720793293
+match = -272.7%%
+title = Cabin phong cách Red Barn với giường tầng - Airbnb
+url = https://www.airbnb.com.vn/rooms/52426653
 
 [vn.trip.com]
 match = -281.8%%
