--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-22 02:15:55
+lastsearch = 2024-07-22 04:52:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Màn tự bung dinh vuong18
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 
 [www.mungbaobao.com]
-match = 20.8%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html?sp=new
+match = 29.2%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -54.2%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -29.2%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -37,9 +37,9 @@ title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [munghoangphat.com]
-match = 41.7%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -33.3%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [demvip.vn]
 match = 45.8%%
