CI images update

--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-22 00:16:13
+lastsearch = 2024-07-22 05:30:55
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [daros.com.vn]
 match = -40.0%%
@@ -29,7 +29,7 @@ url = https://daros.com.vn/ht-15.html
 [htguitarcenter.vn]
 match = -26.7%%
 title = Guitar Trần Acoustic THD-15
-url = https://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
+url = http://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
 
 [www.htlightlevel.vn]
 match = -200.0%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -246.7%%
-title = Giữa tuần Chùa Bát Nhã có chương trình phát gạo mà it ai ...
-url = https://www.youtube.com/watch?v=ldw68uMGfCw
+match = -60.0%%
+title = 🔴 Bản tin trưa 21/7/2024| VTC1
+url = https://www.youtube.com/watch?v=azC6t1CIWN8
 
 [htlight.vn]
 match = -26.7%%
