--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-22 04:32:12
+lastsearch = 2024-07-22 05:30:22
 
 [www.diepxuan.com]
 match = 29.2%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 140x190 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.tripadvisor.com]
-match = -25.0%%
-title = Hard Rock Hotel & Casino Punta Cana
-url = https://www.tripadvisor.com/LocationPhotoDirectLink-g3176298-d1076311-i295132790-Hard_Rock_Hotel_Casino_Punta_Cana-Bavaro_Punta_Cana_La_Altagracia_Provi.html
+match = -112.5%%
+title = Interesting but also scary - Review of Wat Tham Ta Pan ...
+url = https://www.tripadvisor.com/ShowUserReviews-g303917-d7287957-r703463443-Wat_Tham_Ta_Pan_Temple-Phang_Nga_Phang_Nga_Province.html
 
 [m.facebook.com]
 match = -104.2%%
@@ -40,4 +40,9 @@ url = https://www.pinterest.com/pin/diy-preparedness-projects--51115862643233491
 match = -70.8%%
 title = lgbtqiteens 🌈🌈 🌈 🌈 Teenzone... - UMhlobo Wenene FM 88
 url = https://www.facebook.com/mhlobowenenefm/posts/lgbtqiteens-teenzone-09h30-namhlanje-batshana-sithi-its-okay-to-be-diffrent-than/5852043404848561/
+
+[www.tripadvisor.ca]
+match = -70.8%%
+title = Tham Nang Aen Cave - All You Need to Know BEFORE ...
+url = https://www.tripadvisor.ca/Attraction_Review-g7741494-d9785961-Reviews-Tham_Nang_Aen_Cave-Thakhek_Khammouane_Province.html
 
