--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-22 01:22:34
+lastsearch = 2024-07-22 05:31:39
 
 [demxanh.com]
 match = 27.6%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
 
 [demchinhhang.com]
 match = 51.7%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 31.0%%
-title = Chiếu Điều Hòa Cao Su Non Dâu Thỏ Xám 160x200 ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-dau-tho-xam-160x200-180x200cm-phamuyen56-i1861397442.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [nanara.vn]
 match = 34.5%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [chiaki.vn]
-match = 6.9%%
-title = Chiếu điều hòa Tencel latex cao su non 3D kèm gối
-url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-3d-kem-goi
+match = 10.3%%
+title = Chiếu Điều Hòa Tencel Latex Cao Su Non 3D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-3d-mau-2022
 
 [shopee.vn]
 match = -20.7%%
