--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-22 04:28:41
+lastsearch = 2024-07-22 05:29:49
 
 [gobearcats.com]
 match = -142.1%%
@@ -520,4 +520,9 @@ url = https://ki.se/en/people/bertrand-joseph
 match = -173.7%%
 title = Evaluation of the Extent of Variant Histology in Urothelial ...
 url = https://www.cancerdiagnosisprognosis.org/article/37/evaluation-of-the-extent-of-variant-histology-in-urothelial-carcinoma-as-a-predictive-marker-of-clinical-outcomes-after-radical-cystectomy
+
+[www.jacc.org]
+match = -131.6%%
+title = 2022 AHA/ACC/HFSA Guideline for the Management of ...
+url = https://www.jacc.org/doi/10.1016/j.jacc.2021.12.012
 
