--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-22 02:49:57
+lastsearch = 2024-07-22 05:44:29
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
 match = -33.3%%
@@ -37,8 +37,8 @@ title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
 url = https://songhong.info/chan-ga-goi-micro-dn1805
 
 [www.diepxuan.com]
-match = -33.3%%
-title = Bộ ga gối chun xoa 18 - Chăn ga gối đệm Điệp Xuân
+match = -81.0%%
+title = Điệp Xuân Bộ ga gối chun xoa 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 
 [hoangkimhome.com]
