--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-22 01:47:43
+lastsearch = 2024-07-22 05:51:09
 
 [demdreamland.vn]
 match = 25.6%%
@@ -12,9 +12,9 @@ title = Đệm cao su nhập khẩu Dreamland Natural Latex
 url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
-match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+match = 46.5%%
+title = Đệm cao su Dreamland Natural Latex chính hãng
+url = https://demxanh.com/dem-cao-su-dreamland-natural-latex.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -52,8 +52,8 @@ title = Nệm cao su thiên nhiên xuất khẩu Princess Massage
 url = https://nemgiakho.com/nem-cao-su-thien-nhien-xuat-khau-princess-massage.html
 
 [nemamerican.com]
-match = 21.1%%
-title = Nệm Cao Su Non American | Nệm American
+match = 13.5%%
+title = Nệm American: Nệm Cao Su Non American
 url = https://nemamerican.com/
 
 [changagoidemsonghong.online]
