--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-22 01:44:41
+lastsearch = 2024-07-22 05:44:50
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,13 +22,13 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -246.7%%
-title = Luyện tập bước đi đẹp cho bộ đôi mẫu nhí thần thái Bảo Trân
-url = https://www.tiktok.com/@bybacademyvn/video/7349906430587178242
+match = -273.3%%
+title = OPPO RENO10 Cực kỳ xịn xò đang mở bán tại tất cả các cửa ...
+url = https://www.tiktok.com/@thodiasoctrang/video/7262708588185931015
 
 [www.reddit.com]
-match = -120.0%%
-title = Chiều cao 1m80 trên thế giới : r/vozforums
+match = -33.3%%
+title = Chiều cao 1m80 trên thế giới
 url = https://www.reddit.com/r/vozforums/comments/xcdoeo/chiều_cao_1m80_trên_thế_giới/
 
 [mysofa.vn]
