--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-07-21 20:28:17
+lastsearch = 2024-07-22 05:51:20
 
 [www.diepxuan.com]
-match = 10.5%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+match = -16.7%%
+title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [www.cloudynights.com]
 match = -75.0%%
