--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-22 05:52:45
+lastsearch = 2024-07-22 06:15:07
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC24 C09
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc24-c09
+title = Bộ sản phẩm SH_BC22 057
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 20.6%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
+match = -10.5%%
+title = Bộ Chăn Ga Gối Eu04
+url = https://antbedding.com/bo-chan-ga-goi-eu04
 
 [shopee.vn]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+title = Everon ESM-22015 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esm22015.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Bộ ga chun chần bốn mùa Sắc Đông EST23035 180x200
 url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-dong-est23035-180x200.html
 
 [everon.com.vn]
-match = 18.5%%
-title = Bộ Chăn Ga Everon ESB 22054
-url = https://everon.com.vn/bo-chan-ga-everon-esb-22054/
+match = 15.4%%
+title = Bộ Chăn Ga Everon ESM21013
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
 
 [chandrapsaigon.com]
 match = -11.8%%
