--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-21 21:45:46
+lastsearch = 2024-07-22 06:17:23
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -240,4 +240,9 @@ url = https://vandon.quangninh.gov.vn/Lists/TinTuc/Attachments/13226/302.signed.
 match = -67.9%%
 title = 6 mỹ nhân rũ bỏ tóc dài chân ái, lột xác với tóc ngắn sẽ cho ...
 url = https://phunuso.baophunuthudo.vn/6-my-nhan-ru-bo-toc-dai-chan-ai-lot-xac-voi-toc-ngan-se-cho-ban-dong-luc-dao-ngoi-193240720102722015.htm
+
+[www.nhanquyen.vn]
+match = 10.7%%
+title = TUYÊN NGÔN QUỐC TẾ NHÂN QUYỀN, 1948
+url = http://www.nhanquyen.vn/images/File/53sach tuyen ngon nhan quyen 1948.pdf
 
