--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-22 05:49:27
+lastsearch = 2024-07-22 06:20:13
 
 [demxanh.com]
-match = 14.8%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+match = 0.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 14.8%%
