--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-22 03:34:44
+lastsearch = 2024-07-22 06:20:33
 
 [tiki.vn]
 match = -47.6%%
@@ -17,14 +17,14 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -19.0%%
-title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
-url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
+match = -42.9%%
+title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
+url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -85.7%%
+title = Phim Việt Nam Chiếu Rạp Ở Taiwan Chiếu Ngày Bao Nhiêu
+url = https://www.tiktok.com/discover/phim-việt-nam-chiếu-rạp-ở-taiwan-chiếu-ngày-bao-nhiêu?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -95.2%%
-title = Tập 1 | Phim Ngôn Tình Tổng Tài Bá Đạo Siêu Hay 2023
-url = https://www.youtube.com/watch?v=JiTBL5S6-kA
+match = -114.3%%
+title = Cao thủ gắp đồ 18+ ở Đài Loan và cái kết ‘’ Cực Kỳ Thuyết ...
+url = https://www.youtube.com/watch?v=NJHWqhEqVy0
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
@@ -97,8 +97,8 @@ title = Một lần đặt chân đến địa điểm quay loạt phim Đài Lo
 url = https://znews.vn/mot-lan-dat-chan-den-dia-diem-quay-loat-phim-dai-loan-noi-tieng-post1446961.html
 
 [www.instagram.com]
-match = -52.4%%
-title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2
+match = -90.5%%
+title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
 url = https://www.instagram.com/cgvcinemasvietnam/p/C4t4MP-BIW_/
 
 [platinummaterials.co.za]
