--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-22 04:48:37
+lastsearch = 2024-07-22 06:13:52
 
 [dongagroup.vn]
 match = -272.7%%
@@ -93,8 +93,8 @@ url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
 match = -272.7%%
-title = Có bán Giường & lều tắm nắng tại Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/tanning-beds/?locale=vi_VN
+title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
