--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-22 04:46:55
+lastsearch = 2024-07-22 06:31:59
 
 [www.instagram.com]
 match = -30.8%%
@@ -17,14 +17,14 @@ title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
 url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
-match = -307.7%%
-title = Hoi Chan draws on scientific illustrations to create 'muted ...
+match = -253.8%%
+title = Hoi Chan draws on scientific illustrations to create ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 7.7%%
-title = Yuki-Chan Cosplay
-url = https://www.facebook.com/YukiChansp/
+match = 33.3%%
+title = Yuk Hoi Chan
+url = https://www.facebook.com/hoihihoi/
 
 [happypaca.tumblr.com]
 match = -276.9%%
