--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-22 03:32:07
+lastsearch = 2024-07-22 06:26:41
 
 [shopee.vn]
 match = -47.8%%
@@ -12,14 +12,14 @@ title = Chiếu Cói Thái Bình ❤️FREESHIP❤️Chiếu Cói May Viền ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-❤️FREESHIP❤️Chiếu-Cói-May-Viền-In-Hoa-Gấm-Dừa-0-8-1m2-1m5-1m6-1m8-2m2-i.126028938.10544465291
 
 [m.facebook.com]
-match = -13.0%%
-title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
-url = https://m.facebook.com/61553157173242/
+match = 8.7%%
+title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
+url = https://m.facebook.com/CHIEUNHUAHATRANG/
 
 [tiki.vn]
-match = -47.8%%
-title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên - ...
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384235
+match = -21.7%%
+title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384238
 
 [trangvangvietnam.com]
 match = 21.7%%
