--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-22 06:19:30
+lastsearch = 2024-07-22 06:28:26
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,19 +22,19 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [www.facebook.com]
-match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+match = -83.3%%
+title = Chợ Đông Ba - Nam Cali | Westminster CA
+url = https://www.facebook.com/quanohon/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = Tipps and Tricks - How to make CHA GIO - Authentic ...
 url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.tiktok.com]
-match = -133.3%%
-title = 📍nem chua rán: 230 ngõ chợ khâm thiên. ⭐️: 6-15 cành ...
-url = https://www.tiktok.com/@longlongneee/video/7298670033461431570
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [vi.wikipedia.org]
 match = -27.8%%
@@ -180,4 +180,9 @@ url = https://www.sec.gov/Archives/edgar/data/1606268/000119312514253996/0001193
 match = 0.0%%
 title = 
 url = https://www.pge.com/en/account/billing-and-assistance/understand-your-bill/net-energy-metering-bill.html
+
+[anta.com.vn]
+match = 0.0%%
+title = ANTA Việt Nam
+url = https://anta.com.vn/
 
