--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-22 04:31:31
+lastsearch = 2024-07-22 06:31:15
 
 [demxanh.com]
 match = -41.2%%
@@ -27,9 +27,9 @@ title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
 url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [sammas.vn]
-match = -111.8%%
-title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
-url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
+match = -164.7%%
+title = Thảm lì ép Hàn Quốc (M3 hoạ tiết xám trắng) - STHA0001
+url = https://sammas.vn/tham-li-ep-han-quoc-stha0001
 
 [shopee.vn]
 match = -235.3%%
