--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-22 03:37:40
+lastsearch = 2024-07-22 06:26:55
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -167,9 +167,9 @@ title = Tour giant TUI expects bright summer | REUTERS
 url = https://www.youtube.com/watch?v=cToNcnSxFgs
 
 [www.thenaturaladventure.com]
-match = -283.3%%
-title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
+match = -325.0%%
+title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
 
 [www.tripadvisor.com]
 match = -275.0%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -316.7%%
-title = Khao Sok River Rafting with Elephant Sanctuary and Lunch
-url = https://www.tuimusement.com/uk/thailand/krabi/khao-sok-river-rafting-with-elephant-sanctuary-and-lunch/e_w427n-d_2567-c_171/
+match = -241.7%%
+title = Things to do in South Korea: Attractions and Tours
+url = https://www.tuimusement.com/uk/south-korea/c_90/
 
 [www.dixondirectional.com]
 match = -166.7%%
