CI images update

--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-22 04:51:46
+lastsearch = 2024-07-22 06:46:24
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -12,9 +12,9 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 25.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = 10.7%%
+title = Chiếu trúc quế lâm màu trắng không viền 180x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-mau-trang-khong-vien-180x200cm-39.html
 
 [www.facebook.com]
 match = 71.4%%
@@ -27,9 +27,9 @@ title = Chiếu trúc Hạt Quế lâm- chuẩn việt nam 1m5 đến 2m
 url = https://shopee.vn/Chiếu-trúc-Hạt-Quế-lâm-chuẩn-việt-nam-1m5-đến-2m-i.251185875.3635886770
 
 [demxanh.com]
-match = -25.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -7.1%%
+title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
+url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [tiki.vn]
 match = -39.3%%
@@ -67,9 +67,9 @@ title = Chiếu Trúc Quế Lâm
 url = https://45cm.com/product/used_chieu-truc-que-lam-3599064.html
 
 [muathongminh.vn]
-match = 42.9%%
-title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
-url = https://muathongminh.vn/chieu-truc-que-lam-hang-chuan-loai-1-p.1__970075626__20551076
+match = -3.6%%
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
+url = https://muathongminh.vn/chieu-truc-que-lam-mat-ngoc-hat-vang-bong-dep-loai-1-p.1__7879754206__121274905
 
 [lists.archive.carbon60.com]
 match = -96.4%%
@@ -80,4 +80,19 @@ url = https://lists.archive.carbon60.com/netapp/toasters/1036?page=last
 match = -10.7%%
 title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
 url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
+
+[www.sendo.vn]
+match = -17.9%%
+title = Chiếu Trúc Hạt Quế Lâm kích thước 1m8x2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-1m8x2m-duo-c-kie-m-ha-ng-18050982-117148935.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721088000325_undefined_-1_cateLvl2_0_56_23_-1
+
+[caobanggreen.vn]
+match = 0.0%%
+title = Index of /wp-content/uploads/2024/05/
+url = https://caobanggreen.vn/wp-content/uploads/2024/05/?MD
+
+[ngochieu.com]
+match = 22.2%%
+title = Thương lắm quê hương cơ cực
+url = https://ngochieu.com/thuong-lam-que-huong-co-cuc/
 
