--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-22 03:38:48
+lastsearch = 2024-07-22 06:46:02
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5BwIB11&sig=ACfU3U2hV7T9IGGyvc28FnrP7Sy-I9ZJOg&hl=en&sa=X&ved=2ahUKEwi4gY6n7LiHAxWJEEQIHd9vJakQ6AF6BAgaEAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmlc92jS&sig=ACfU3U1PRyn_85NUNSRmTRI8Y5w0tnNX0g&hl=en&sa=X&ved=2ahUKEwiex_6_qLmHAxXXFDQIHcEIADMQ6AF6BAgpEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -217.6%%
-title = ‘This is mind-boggling': Man who requested District 16 recount ...
-url = https://www.youtube.com/watch?v=sfpqKNlppQY
+match = -123.5%%
+title = Woman shoots HOA President With A Red Powder Cannon
+url = https://www.youtube.com/shorts/AIc_Cd0xt4A
 
 [communityassociations.net]
 match = -35.3%%
@@ -510,4 +510,9 @@ url = https://www.vacourts.gov/scndex.htm
 match = -52.9%%
 title = Những màn bắn pháo hoa đẹp nhất năm 2023
 url = https://znews.vn/video-nhung-man-ban-phao-hoa-dep-nhat-nam-2023-post1390149.html
+
+[doi.colorado.gov]
+match = -58.8%%
+title = Home | DORA Division of Insurance
+url = https://doi.colorado.gov/
 
