CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-21 22:33:59
+lastsearch = 2024-07-22 08:05:48
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Nhớ nghề dệt chiếu quê tôi
-url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -106.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -231.2%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=rq3aAAAAMAAJ&pg=RA6-PA66&lpg=RA6-PA66&dq=chieu+lac+soc+16&source=bl&ots=W7J6xP5dSK&sig=ACfU3U0F3FrHgj6TPCYMLTZZEHdkmwEAkA&hl=en&sa=X&ved=2ahUKEwjX2b6fpLeHAxXrElkFHaNMAzkQ6AF6BAgeEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Eiy5wx7&sig=ACfU3U2EqOCRmyIWOL14Hyu814vWwsrKwQ&hl=en&sa=X&ved=2ahUKEwjHxpiqurmHAxWHGlkFHWrZATgQ6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
