--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-22 04:32:03
+lastsearch = 2024-07-22 08:05:39
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,13 +17,13 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
-url = https://www.tuigroup.com/en-en
+match = -250.0%%
+title = TUI brand name may no longer be used by TUI Russia
+url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
 
 [www.tui.nl]
-match = -316.7%%
-title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - Japan
+match = -300.0%%
+title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - TUI
 url = https://www.tui.nl/16-dg-cruise-azie-noordam-519967721/
 
 [embraer.com]
@@ -107,9 +107,9 @@ title = Tag: TUI Group
 url = https://www.ttgasia.com/tag/tui-group/
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
-url = https://www.tui.co.uk/
+match = -208.3%%
+title = Flights from Manchester Airport (MAN) - TUI
+url = https://www.tui.co.uk/flight/airports/manchester
 
 [maritime-executive.com]
 match = -316.7%%
@@ -415,4 +415,9 @@ url = https://in.linkedin.com/company/tuigroup?trk=ppro_cprof
 match = -25.0%%
 title = TUI Infotech - Juniper
 url = https://ejuniper.com/en/clients/tui-infotech/
+
+[www.tuimusement.com]
+match = -241.7%%
+title = Things to do in South Korea: Attractions and Tours
+url = https://www.tuimusement.com/uk/south-korea/c_90/
 
