--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-22 04:46:10
+lastsearch = 2024-07-22 08:01:40
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -163.2%%
+title = Mộc Hương ta hoa vàng còn đáng chơi khi giá trị nó không ...
+url = https://www.youtube.com/watch?v=kOeDP1xRFpk
 
 [trangtrisanvuon.vn]
 match = -147.4%%
