--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-22 05:49:05
+lastsearch = 2024-07-22 07:58:46
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -22,9 +22,9 @@ title =
 url = https://www.uci.edu/
 
 [www.linkedin.com]
-match = -241.7%%
-title = Phu Ha - Lawrenceville, Georgia, United States
-url = https://www.linkedin.com/in/phu-ha-b87850148
+match = -175.0%%
+title = Gino Angelici - Data Research Assistant
+url = https://www.linkedin.com/in/gino-angelici-19a594242
 
 [www.gwhospital.com]
 match = -275.0%%
@@ -255,4 +255,29 @@ url = https://registrar.ucla.edu/file/b21f64a4-4d88-4f22-bae9-2451e083973c
 match = -341.7%%
 title = Cleveland has top MLB draft pick, with Georgia's Condon ...
 url = https://www.fox16.com/sports/ap-cleveland-has-top-mlb-draft-pick-with-georgias-condon-and-oregon-states-bazzana-top-prospects/
+
+[law.justia.com]
+match = 0.0%%
+title = 
+url = https://law.justia.com/codes/georgia/2022/title-16/chapter-6/section-16-6-3/
+
+[www.sec.gov]
+match = -83.3%%
+title = 0000950103-16-011097.txt
+url = https://www.sec.gov/Archives/edgar/data/19617/0000950103-16-011097.txt
+
+[www.dir.ca.gov]
+match = -300.0%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+
+[aaseedstewards.ucdavis.edu]
+match = -266.7%%
+title = Untitled - Asian American Seed Stewards - UC Davis
+url = https://aaseedstewards.ucdavis.edu/sites/g/files/dgvnsk12221/files/media/documents/API Farmers Seminar Flyer .pdf
+
+[socialwelfare.berkeley.edu]
+match = -191.7%%
+title = Linda M. Burton | Berkeley Social Welfare
+url = https://socialwelfare.berkeley.edu/people/linda-m-burton
 
