--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-07-22 04:32:53
+lastsearch = 2024-07-22 08:04:21
 
 [tuhung.net]
 match = -77.8%%
@@ -22,9 +22,9 @@ title = Nên chọn nệm cao su nào phù hợp với người lớn tuổi
 url = https://congtynemthangloi.com.vn/nen-chon-nem-cao-su-nao-phu-hop-voi-nguoi-lon-tuoi
 
 [www.instagram.com]
-match = -155.6%%
-title = 𝗡𝗘𝗠 𝗖𝗔𝗬 𝗧𝗢̉𝗜 𝗢̛́𝗧 E gây nghiện thành công cho nhiều khách ...
-url = https://www.instagram.com/minhhong91/p/C6nc_O_pRku/
+match = -77.8%%
+title = Instagram
+url = https://www.instagram.com/minhhong91/p/B_mece0pkRv/
 
 [www.sec.gov]
 match = -27.8%%
@@ -52,9 +52,9 @@ title = Giá nệm topper foam ở đâu rẻ nhất tháng 06/2024 - Trang 14 -
 url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+match = -7.7%%
+title = Điệp Xuân Nệm
+url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/
 
 [m.facebook.com]
 match = -138.9%%
