--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-22 03:33:48
+lastsearch = 2024-07-22 07:59:17
 
 [xoptraisan.info]
 match = 17.6%%
@@ -17,14 +17,14 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -41.2%%
-title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
-url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
+match = -29.4%%
+title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
 
 [vatlieulotsan.com]
-match = -100.0%%
-title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
-url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
+match = -76.5%%
+title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
+url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
 
 [lombom.com]
 match = -158.8%%
