--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-22 03:38:59
+lastsearch = 2024-07-22 08:00:57
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -6.2%%
-title = Dvorak Genshin Bpc
-url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
+match = -181.2%%
+title = Nhà nấm ngày bé mơ được ghé thăm #art #họcvẽcơbản ...
+url = https://www.tiktok.com/@tapvecungnhien/video/7223337440034032901
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=CUQBFAvIlUU
 [m.facebook.com]
 match = 0.0%%
 title = Thiên An Stationery
-url = https://m.facebook.com/profile.php?id=100065257461640&locale=fr_FR
+url = https://m.facebook.com/profile.php?id=100065257461640&locale=ms_MY
 
 [noveltoon.vn]
 match = -100.0%%
