CI images update

--- a/images/nem-everon-200x200x9/config.ini
+++ b/images/nem-everon-200x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-200x200x9.html
 lastopen = 2024-06-06 17:10:44
 
 [search]
-lastsearch = 2024-07-22 05:46:53
+lastsearch = 2024-07-22 09:15:13
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -27,9 +27,9 @@ title = Đệm - Nệm – Tổng Đại Lý Everon Chính Hãng
 url = https://everonchinhhang.vn/collections/dem-nem-everon-chinh-hang
 
 [everon365.vn]
-match = 10.0%%
-title = Đệm bông ép Everon Goodsleep
-url = https://everon365.vn/dem-bong-ep-everon-goodsleep-gap-2.html
+match = 0.0%%
+title = Đệm bông ép Everon Ceramic Vip
+url = https://everon365.vn/dem-bong-ep-everon-ceramic-vip-gap-2.html
 
 [remcuathaonguyen.com]
 match = -5.0%%
@@ -97,9 +97,9 @@ title = Nệm Everon
 url = https://www.diepxuan.com/everon/nem-everon.html?p=2
 
 [forum.cartridgecollectors.org]
-match = -25.0%%
-title = German 9mm Nahpatrone Cartridges
-url = https://forum.cartridgecollectors.org/t/german-9mm-nahpatrone-cartridges/16700
+match = -85.0%%
+title = German 7.62x39 - General Ammunition Discussion
+url = https://forum.cartridgecollectors.org/t/german-7-62x39/15487
 
 [www.hkpro.com]
 match = -75.0%%
