--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-22 05:49:38
+lastsearch = 2024-07-22 09:15:24
 
 [www.diepxuan.com]
-match = -27.3%%
-title = Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+match = -72.7%%
+title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
