--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-22 06:27:56
+lastsearch = 2024-07-22 09:07:15
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC4vlszC&sig=ACfU3U1h4z9-VMF6JwDqWof7-pkh3VCNxQ&hl=en&sa=X&ved=2ahUKEwjqy4G6pLmHAxV8g4kEHQkXAKYQ6AF6BAgdEAM
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC4wlovC&sig=ACfU3U3wV6pMPO6qdLbppQ9yZsIJxhhxVA&hl=en&sa=X&ved=2ahUKEwiekriIyLmHAxXoEFkFHYzMBTYQ6AF6BAhAEAM
 
 [www.diepxuan.com]
 match = -81.0%%
