--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-22 03:30:25
+lastsearch = 2024-07-22 09:14:44
 
 [www.tiktok.com]
 match = 0.0%%
@@ -129,7 +129,7 @@ url = https://www.instagram.com/boots_tagram23/p/C8kypfiPAue/
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+url = https://www.facebook.com/diepxuanco/?locale=pt_BR
 
 [www.espn.com]
 match = -93.8%%
@@ -212,9 +212,9 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -206.2%%
-title = marc jacobs men wallets - farfetch marc jacobs wallet ...
-url = https://mechanicaldesign-job.com/blogs/kkfggukv-199//
+match = -200.0%%
+title = new rolex yachtmaster - rolex yacht master price new ...
+url = https://mechanicaldesign-job.com/products/fpftgfny-42/
 
 [www.veryberryfrozenyogurt.com]
 match = -262.5%%
