--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-22 06:18:39
+lastsearch = 2024-07-22 09:13:21
 
 [gobearcats.com]
 match = -142.1%%
@@ -57,9 +57,9 @@ title = Banking Act Unclaimed Money as at 31 December 2007
 url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 
 [www2.ed.gov]
-match = -126.3%%
-title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+match = 0.0%%
+title = 
+url = https://www2.ed.gov/programs/psp/select.html
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -252,8 +252,8 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
+match = 15.8%%
+title = Li Zhang - UCSF Profiles
 url = https://profiles.ucsf.edu/li.zhang
 
 [profiles.stanford.edu]
